<resources>
    <string name="app_name">Transport</string>


    <!--    <string name="map_key" translatable="false">AIzaSyBHnUVu-HEZlbRGtv2YrbQ7Hs_HxupnWuo</string>-->
    <string name="map_key" translatable="false">AIzaSyBmsBslfmtv2Jds7z4HVGxxVxwLdHGv5oM</string>


    <string name="hello">Hello!</string>
    <string name="select">Select</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? <b>Sign up now</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="welcome">Welcome!</string>
    <string name="continue_as">Continue As</string>
    <string name="i_want_to_transport_furniture_load_house_or_goods_etc">I want to Transport\nFurniture / Load / House\nor Goods etc…</string>
    <string name="click_here">Click Here</string>
    <string name="i_am_vehicle_owner_transporter_driver_or_travel_agent_etc">I am Vehicle Owner\nTransporter,\nDriver or Travel Agent\netc…</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="enter_valid_email">Enter valid Email</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="home">Home</string>
    <string name="from">From</string>
    <string name="your_location">Your Location</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="go">GO</string>
    <string name="please_turn_on_gps">Please turn on GPS for batter result</string>
    <string name="fail">Fail</string>
    <string name="select_type">Select Type</string>
    <string name="you_have_to_supply">You have to supply…</string>
    <string name="goods">Goods</string>
    <string name="humans">Humans</string>
    <string name="product_name">Product Name</string>
    <string name="select_materials">Select Materials</string>
    <string name="from_jem">From :</string>
    <string name="solid">Solid</string>
    <string name="liquid">Liquid</string>
    <string name="gas">Gas</string>
    <string name="product_kg">Product kg</string>
    <string name="gm">gm</string>
    <string name="inch">inch</string>
    <string name="size">Size :</string>
    <string name="height">Height</string>
    <string name="x">X</string>
    <string name="width">Width</string>
    <string name="your_budget">Your Budget</string>
    <string name="vehicle_selection">Vehicle Selection</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_type_zem">Vehicle Type :</string>
    <string name="_private">Private</string>
    <string name="sharing">Sharing</string>
    <string name="loading_unloading">Loading &amp; Unloading :</string>
    <string name="loading_unloding">Loading &amp; Unloading</string>
    <string name="by_customer">By Customer</string>
    <string name="by_vehicle_owner">By Vehicle Owner</string>
    <string name="receiver_contact_name_optional">Receiver <b>Contact Name</b> (Optional)</string>
    <string name="receiver_contact_number_optional">Receiver <b>Contact Number</b> (Optional)</string>
    <string name="send_order">Send Order</string>
    <string name="price">Price</string>
    <string name="peoples">Peoples</string>
    <string name="luggage">Luggage</string>
    <string name="with_luggage">With Luggage</string>
    <string name="without_luggage">Without Luggage</string>
    <string name="luggage_weigth_approx_kg">Luggage Weight (Approx Kg)</string>
    <string name="select_your_location">Select your location</string>
    <string name="select_target_location">Select Target Location</string>
    <string name="select_date">Select date</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="material_type">Material Type</string>
    <string name="jem">:</string>
    <string name="total_bids">Total Bids</string>
    <string name="enter_contact_name">Enter contact name</string>
    <string name="enter_receiver_contact_number">Enter receiver contact number</string>
    <string name="my_order">My Order</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="my_profile">My Profile</string>
    <string name="receive_order">Receive Order</string>
    <string name="my_wallet">My Wallet</string>
    <string name="setting">Setting</string>
    <string name="invite_friends">invite friends</string>
    <string name="support_help">Support (Help)</string>
    <string name="logout">Log Out</string>
    <string name="confirm_paswword_not_matched">Confirm Password not matched</string>
    <string name="select_product_status_type">Select product status type</string>
    <string name="product_weight">Product Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="select_weight_unit">Select Weight Unit</string>
    <string name="select_size_unit">Select Size Unit</string>
    <string name="enter_width">Enter Width</string>
    <string name="enter_height">Enter Height</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="enter_your_budget">Enter Your Budget</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="select_loading_unloading">Select Vehicle loading and unloading</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_peoples_number">Enter peoples Number</string>
    <string name="select_luggage_option">Select Luggage Option</string>
    <string name="enter_luggage_approx_weight">Enter luggage approx weight</string>
    <string name="edit">Edit</string>
    <string name="select_vehicle_owner">Select Vehicle Owner</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="save">Save</string>
    <string name="now_you_can_edit_this_order">Now you can edit this order</string>
    <string name="hire_kg_approx">Hire kg Approx</string>
    <string name="search">Search</string>
    <string name="your_proposal_price">Your proposal price</string>
    <string name="select_your_vehicle">Select your vehicle</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="enter_proposal_price">Enter proposal price</string>
    <string name="goods_receive_order">Goods Receive Order</string>
    <string name="humans_receive_order">Humans Receive Order</string>
    <string name="vehicle_owner_name">Vehicle Owner Name</string>
    <string name="pick_up_date_time"><![CDATA[Pick Up Date & Time]]></string>
    <string name="vehicle_owner_rate">Vehicle Owner Rate</string>
    <string name="profile">Profile</string>
    <string name="profile_jem">Profile  :</string>
    <string name="total_projects">Total Projects</string>
    <string name="total_project">Total Project</string>
    <string name="vehicle_owner_price">Vehicle Owner Price</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicle_jem">Vehicle  :</string>
    <string name="contact_mo_no">Contact Mo.No.</string>
    <string name="last_customer_mo_no">Last Customer Mo. No.</string>
    <string name="vehicle_owners_proof_jem">Vehicle Owners :\nProof</string>
    <string name="vehicle_owners_n_proof_jem">Vehicle Owners :\nProof</string>
    <string name="rc_book">RC Book</string>
    <string name="address_proof">Address Proof</string>
    <string name="licence">Licence</string>
    <string name="name">Name</string>
    <string name="hire_kg">Hire Kg</string>
</resources>
