<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/rectangle_bg_gray_16_dp">

        <ImageView
            android:id="@+id/iv_vehicle_image"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_vehicle_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/sp12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_vehicle_image"
            app:layout_constraintWidth_percent=".15"
            tools:text="Tempo" />

        <TextView
            android:id="@+id/tv_wheel_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/textGray"
            android:textSize="@dimen/sp8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vehicle_name"
            app:layout_constraintWidth_percent=".15"
            tools:text="3-4 wheeler" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/textLightGray"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vehicle_image"
            app:layout_constraintEnd_toEndOf="@+id/tv_your_location"
            app:layout_constraintStart_toStartOf="@+id/tv_your_location"
            app:layout_constraintTop_toTopOf="@+id/iv_vehicle_image" />

        <TextView
            android:id="@+id/tv_your_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/your_location"
            android:textColor="@color/textGray"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/tv_vehicle_name"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/textLightGray"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/tv_location"
            app:layout_constraintStart_toStartOf="@+id/tv_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/your_location"
            android:textColor="@color/textGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_truck_to_location"
            app:layout_constraintBottom_toBottomOf="@+id/tv_your_location"
            app:layout_constraintEnd_toStartOf="@+id/tv_location"
            app:layout_constraintStart_toEndOf="@+id/tv_your_location"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent=".2" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_wheel_type,tv_location,tv_your_location" />

        <TextView
            android:id="@+id/tv_material_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/material_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/tv_jem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/jem"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_material_type"
            app:layout_constraintStart_toEndOf="@+id/barrier3" />

        <TextView
            android:id="@+id/tv_material_type_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_material_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_jem" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_material_type_value" />

        <TextView
            android:id="@+id/tv_jem_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/jem"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
            app:layout_constraintStart_toEndOf="@+id/barrier3" />

        <TextView
            android:id="@+id/tv_price_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_jem_2" />


        <TextView
            android:id="@+id/tv_vehicle_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/vehicle_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_value" />

        <TextView
            android:id="@+id/tv_jem_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/jem"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_vehicle_type"
            app:layout_constraintStart_toEndOf="@+id/barrier3" />


        <RadioButton
            android:id="@+id/rb_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/_private"
            android:textColor="@color/textGray"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_vehicle_type"
            app:layout_constraintEnd_toStartOf="@+id/rb_sharing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_jem_3" />

        <RadioButton
            android:id="@+id/rb_sharing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/sharing"
            android:textColor="@color/textGray"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_vehicle_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rb_private" />


        <TextView
            android:id="@+id/tv_total_bids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="16dp"
            android:text="@string/total_bids"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vehicle_type" />

        <TextView
            android:id="@+id/tv_jem_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/jem"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_total_bids"
            app:layout_constraintStart_toEndOf="@+id/barrier3" />

        <TextView
            android:id="@+id/tv_total_bids_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_total_bids"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_jem_4" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_material_type,tv_price,tv_vehicle_type,tv_total_bids" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>