<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        tools:context=".login.fragment.LoginFragment"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_upper_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="1:0.65"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_bg_login_signup_uper" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:text="@string/hello"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_32sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_upper_bg"
                app:layout_constraintStart_toStartOf="parent"
              />

            <TextView
                android:id="@+id/tv_select_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/rectangle_light_orange_32_dp"
                android:hint="@string/select"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintWidth_percent=".7" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_down_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/tv_select_type"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/tv_select_type"
                app:layout_constraintTop_toTopOf="@+id/tv_select_type" />


            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/rectangle_light_orange_32_dp"
                android:gravity="center"
                android:hint="@string/username"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_type"
                app:layout_constraintWidth_percent=".7" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="@+id/et_user_name"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@+id/et_user_name"
                app:layout_constraintTop_toTopOf="@+id/et_user_name" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/rectangle_light_orange_32_dp"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/_32sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user_name"
                app:layout_constraintWidth_percent=".7" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="@+id/et_password"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toTopOf="@+id/et_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_hide_password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/selector_password_hide_show"
                app:layout_constraintBottom_toBottomOf="@+id/et_password"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintTop_toTopOf="@+id/et_password" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rectangle_primary_32_dp"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingTop="12dp"
                android:paddingEnd="24dp"
                android:paddingBottom="12dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/textBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintVertical_bias="0.00999999"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent=".7" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:text="@string/don_t_have_an_account_sign_up_now"
                android:textColor="@color/textBlack"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/sp16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>